--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@ant-design/icons": "^5.4.0",
     "@monaco-editor/react": "^4.6.0",
     "allotment": "^1.20.2",
+    "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.51.0",
     "react": "^18.3.1",
